# xvnkb-meson

./: configure  meson.build  meson.options  xvnkb_install  xvnkb_localeconf  xvnkb_uninstall
tools/: button.c  button.h  data.h  event.c  event.h  mode.c  mode.h  property.c  property.h  xconfig.c  xconfig.h  xresource.c  xresource.h
